// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli execute in create-react-app setup 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })],
					[
						new PluginTerminal({ cmd: 'npm run test', allowedCommands: jestCommands }),
						new PluginCodeCoverage(),
					],
					[
						new PluginNpmScripts({
							scripts: [{ title: 'build', cmd: 'npm run build' }, { title: 'test', cmd: 'npm run test' }],
						}),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute in lerna repo 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies({
							lerna: 'lerna.json',
							installProcess: { title: 'run bootstrap', cmd: 'npm run bootstrap', cwd: '/' },
						}),
						new PluginReadme({ file: 'README.md' }),
					],
					[
						new PluginCodeCoverage(),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap' },
								{ title: 'build', cmd: 'npm run build' },
								{ title: 'test', cmd: 'npm run test' },
								{ title: 'lint', cmd: 'npm run lint' },
							],
						}),
					],
				],
			},
			{
				title: 'script-start',
				rows: [[new PluginTerminal({ cmd: 'npm start', cwd: 'packages/script-start', autostart: true })]],
			},
			{
				title: 'script-storybook',
				rows: [[new PluginTerminal({ cmd: 'npm run storybook', cwd: 'packages/script-storybook' })]],
			},
			{
				title: 'script-test',
				rows: [
					[
						new PluginCodeCoverage({ cwd: 'packages/script-test' }),
						new PluginNpmScripts({
							scripts: [{ title: 'test', cmd: 'npm run test', cwd: 'packages/script-test' }],
						}),
					],
				],
			},
			{
				title: 'script-watch-test',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'packages/script-watch-test' }),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test' }),
					],
				],
			},
			{
				title: 'all-scripts',
				rows: [
					[
						new PluginTerminal({ cmd: 'npm start', cwd: 'configs/all-scripts', autostart: true }),
						new PluginTerminal({ cmd: 'npm run storybook', cwd: 'configs/all-scripts' }),
					],
					[
						new PluginReadme({ file: 'configs/all-scripts/README.md' }),
						new PluginTerminal({ cmd: 'npm run watch-test', cwd: 'configs/all-scripts' }),
					],
					[
						new PluginCodeCoverage({ cwd: 'configs/all-scripts' }),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap', cwd: 'configs/all-scripts' },
								{ title: 'build', cmd: 'npm run build', cwd: 'configs/all-scripts' },
								{ title: 'watch', cmd: 'npm run watch', cwd: 'configs/all-scripts' },
								{ title: 'test', cmd: 'npm run test', cwd: 'configs/all-scripts' },
								{ title: 'lint', cmd: 'npm run lint', cwd: 'configs/all-scripts' },
								{ title: 'clean', cmd: 'npm run clean', cwd: 'configs/all-scripts' },
								{ title: 'flow', cmd: 'npm run flow', cwd: 'configs/all-scripts' },
								{ title: 'compile', cmd: 'npm run compile', cwd: 'configs/all-scripts' },
								{ title: 'format', cmd: 'npm run format', cwd: 'configs/all-scripts' },
								{ title: 'prettier', cmd: 'npm run prettier', cwd: 'configs/all-scripts' },
								{ title: 'coverage', cmd: 'npm run coverage', cwd: 'configs/all-scripts' },
								{ title: 'prepare', cmd: 'npm run prepare', cwd: 'configs/all-scripts' },
								{ title: 'validate', cmd: 'npm run validate', cwd: 'configs/all-scripts' },
								{ title: 'deploy', cmd: 'npm run deploy', cwd: 'configs/all-scripts' },
								{ title: 'docs', cmd: 'npm run docs', cwd: 'configs/all-scripts' },
								{
									title: 'build-storybook',
									cmd: 'npm run build-storybook',
									cwd: 'configs/all-scripts',
								},
							],
						}),
					],
				],
			},
			{
				title: 'readme',
				rows: [[new PluginReadme({ file: 'configs/readme/README.md' })]],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute in yarn workspaces repo 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies({
							lerna: 'lerna.json',
							installProcess: { title: 'run bootstrap', cmd: 'yarn bootstrap', cwd: '/' },
						}),
						new PluginTerminal({ cmd: 'yarn start', autostart: true }),
					],
					[new PluginReadme({ file: 'README.md' }), new PluginCodeCoverage()],
					[
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'yarn bootstrap' },
								{ title: 'build', cmd: 'yarn build' },
								{ title: 'test', cmd: 'yarn test' },
								{ title: 'lint', cmd: 'yarn lint' },
							],
						}),
					],
				],
			},
			{
				title: 'script-start',
				rows: [[new PluginTerminal({ cmd: 'yarn start', cwd: 'packages/script-start', autostart: true })]],
			},
			{
				title: 'script-storybook',
				rows: [[new PluginTerminal({ cmd: 'yarn storybook', cwd: 'packages/script-storybook' })]],
			},
			{
				title: 'script-test',
				rows: [
					[
						new PluginCodeCoverage({ cwd: 'packages/script-test' }),
						new PluginNpmScripts({
							scripts: [{ title: 'test', cmd: 'yarn test', cwd: 'packages/script-test' }],
						}),
					],
				],
			},
			{
				title: 'script-watch-test',
				rows: [
					[
						new PluginTerminal({ cmd: 'yarn watch-test', cwd: 'packages/script-watch-test' }),
						new PluginCodeCoverage({ cwd: 'packages/script-watch-test' }),
					],
				],
			},
			{
				title: 'all-scripts',
				rows: [
					[
						new PluginTerminal({ cmd: 'yarn start', cwd: 'configs/all-scripts', autostart: true }),
						new PluginTerminal({ cmd: 'yarn storybook', cwd: 'configs/all-scripts' }),
					],
					[
						new PluginReadme({ file: 'configs/all-scripts/README.md' }),
						new PluginTerminal({ cmd: 'yarn watch-test', cwd: 'configs/all-scripts' }),
					],
					[
						new PluginCodeCoverage({ cwd: 'configs/all-scripts' }),
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'yarn bootstrap', cwd: 'configs/all-scripts' },
								{ title: 'build', cmd: 'yarn build', cwd: 'configs/all-scripts' },
								{ title: 'watch', cmd: 'yarn watch', cwd: 'configs/all-scripts' },
								{ title: 'test', cmd: 'yarn test', cwd: 'configs/all-scripts' },
								{ title: 'lint', cmd: 'yarn lint', cwd: 'configs/all-scripts' },
								{ title: 'clean', cmd: 'yarn clean', cwd: 'configs/all-scripts' },
								{ title: 'flow', cmd: 'yarn flow', cwd: 'configs/all-scripts' },
								{ title: 'compile', cmd: 'yarn compile', cwd: 'configs/all-scripts' },
								{ title: 'format', cmd: 'yarn format', cwd: 'configs/all-scripts' },
								{ title: 'prettier', cmd: 'yarn prettier', cwd: 'configs/all-scripts' },
								{ title: 'coverage', cmd: 'yarn coverage', cwd: 'configs/all-scripts' },
								{ title: 'prepare', cmd: 'yarn prepare', cwd: 'configs/all-scripts' },
								{ title: 'validate', cmd: 'yarn validate', cwd: 'configs/all-scripts' },
								{ title: 'deploy', cmd: 'yarn deploy', cwd: 'configs/all-scripts' },
								{ title: 'docs', cmd: 'yarn docs', cwd: 'configs/all-scripts' },
								{ title: 'build-storybook', cmd: 'yarn build-storybook', cwd: 'configs/all-scripts' },
							],
						}),
					],
				],
			},
			{
				title: 'readme',
				rows: [[new PluginReadme({ file: 'configs/readme/README.md' })]],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with "README.md" file 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginReadme({ file: 'README.md' })]],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with all possible scripts 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-readme
const { PluginReadme } = require('@dash4/plugin-readme');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })],
					[new PluginTerminal({ cmd: 'npm run storybook' }), new PluginReadme({ file: 'README.md' })],
					[new PluginTerminal({ cmd: 'npm run watch-test' }), new PluginCodeCoverage()],
					[
						new PluginNpmScripts({
							scripts: [
								{ title: 'bootstrap', cmd: 'npm run bootstrap' },
								{ title: 'build', cmd: 'npm run build' },
								{ title: 'watch', cmd: 'npm run watch' },
								{ title: 'test', cmd: 'npm run test' },
								{ title: 'lint', cmd: 'npm run lint' },
								{ title: 'clean', cmd: 'npm run clean' },
								{ title: 'flow', cmd: 'npm run flow' },
								{ title: 'compile', cmd: 'npm run compile' },
								{ title: 'format', cmd: 'npm run format' },
								{ title: 'prettier', cmd: 'npm run prettier' },
								{ title: 'coverage', cmd: 'npm run coverage' },
								{ title: 'prepare', cmd: 'npm run prepare' },
								{ title: 'validate', cmd: 'npm run validate' },
								{ title: 'deploy', cmd: 'npm run deploy' },
								{ title: 'docs', cmd: 'npm run docs' },
								{ title: 'build-storybook', cmd: 'npm run build-storybook' },
							],
						}),
					],
				],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with script "start" 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginTerminal({ cmd: 'npm start', autostart: true })]],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with script "storybook" 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [[new PluginDependencies(), new PluginTerminal({ cmd: 'npm run storybook' })]],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with script "test" 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-npm-scripts
const { PluginNpmScripts } = require('@dash4/plugin-npm-scripts');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginCodeCoverage()],
					[new PluginNpmScripts({ scripts: [{ title: 'test', cmd: 'npm run test' }] })],
				],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with script "watch-test" 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[new PluginDependencies(), new PluginTerminal({ cmd: 'npm run watch-test' })],
					[new PluginCodeCoverage()],
				],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;

exports[`cli execute with script "watch-test-jest" 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "/**
 *
 * 	DASH4 configuration
 *  https://github.com/smollweide/dash4
 *
 */
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-dependencies
const { PluginDependencies } = require('@dash4/plugin-dependencies');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-terminal
const { PluginTerminal, jestCommands } = require('@dash4/plugin-terminal');
// https://github.com/smollweide/dash4/tree/master/plugins/plugin-code-coverage
const { PluginCodeCoverage } = require('@dash4/plugin-code-coverage');

async function getConfig() {
	return {
		port: 8080,
		tabs: [
			{
				title: 'Root',
				rows: [
					[
						new PluginDependencies(),
						new PluginTerminal({ cmd: 'npm run watch-test', allowedCommands: jestCommands }),
					],
					[new PluginCodeCoverage()],
				],
			},
		],
	};
}

module.exports = getConfig;
",
    }
  }
/>
`;
